<resources>
    <string name="app_name">KieserApp</string>
    <string name="geraet">Gerät</string>
    <string name="gewicht">Gewicht</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="start"></string>
    <string name="startCell">Start</string>
    <string name="erledigt"></string>
    <string name="uhr">Uhr</string>
    <string name="uhrDefault">00:00.000</string>
    <string name="uhrDescription">Ziel in sec</string>
    <string name="reset">Reset</string>
    <string name="neueZeile">Zeile hinzufügen</string>
    <string name="zeileLoeschen">Löschen</string>
</resources>
